--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,6 +151,14 @@
     scrollbar-width: none; /* Firefox */
   }
 
+  .no-scrollbar::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   /* END of Common */
   /* START of Header */
   .nav-active {
