--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
  
 
   body {
-    @apply font-poppins text-[16px] tracking-[-0.03em] ;
+    @apply font-poppins text-[16px]  tracking-[-0.03em] ;
   }
 
   a {
@@ -39,6 +39,9 @@
 
 @layer utilities {
   /* START of Typography */
+  .textColor{
+    @apply text-[#D07021];
+  }
   .h-num {
     @apply font-inter text-[72px] font-bold leading-[84px];
   }
@@ -185,6 +188,7 @@
   .dot {
     @apply size-1.5 rounded-full bg-p2 max-lg:hidden;
   }
+
 
   .sidebar-before {
     @apply max-lg:before:absolute max-lg:before:-right-64 max-lg:before:top-2/5 max-lg:before:h-[440px] max-lg:before:w-[252px] max-lg:before:bg-s4 max-lg:before:blur-[200px] max-lg:before:content-[''];
