Modify the add campaign form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -334,3 +334,22 @@
 
   /*  END of Footer*/
 }
+
+
+/* Custom Scrollbar Style */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px; /* Set width for vertical scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1); /* Thumb color */
+  border-radius: 10px; /* Rounded thumb */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.2); /* Hover effect for thumb */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent; /* Hide track */
+}
