--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -336,20 +336,22 @@
 }
 
 
-/* Custom Scrollbar Style */
+/* Custom scrollbar */
 .custom-scrollbar::-webkit-scrollbar {
-  width: 6px; /* Set width for vertical scrollbar */
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.1); /* Thumb color */
-  border-radius: 10px; /* Rounded thumb */
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.2); /* Hover effect for thumb */
+  width: 8px;
+  height: 8px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background-color: transparent; /* Hide track */
+  background: #f1f1f1;
 }
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
